# RayTracerGPU

./: .gitignore  CMakeLists.txt  README.md  cornell.txt  homunculus.txt  scene.txt  testscene2.txt
dependencies/glad/: glad.h
src/: color.h  config.h  glad.c  helper.h  helper2.cpp  helper2.h  intersection.cpp  intersection.h  intersection2.cpp  intersection2.h  lighting.cpp  lighting.h  lighting2.cpp  lighting2.h  main.cpp  package_manager.cpp  package_manager.h  rayData.h  rayData2.comp  renderer.comp  renderer.cpp  renderer2.cpp  renderer2.h  todo.txt  viewport.cpp  viewport.h  viewport2.h
